--- a/dream-album/pom.xml
+++ b/dream-album/pom.xml
@@ -77,12 +77,12 @@
 		<version>4.2</version>
 	</dependency>
 	<dependency>
-		<groupId>com.jmcx</groupId>
+		<groupId>com.dreambox</groupId>
 		<artifactId>dream-web</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
 	<dependency>
-		<groupId>com.jmcx</groupId>
+		<groupId>com.dreambox</groupId>
 		<artifactId>dream-core</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
