--- a/dream-album/pom.xml
+++ b/dream-album/pom.xml
@@ -55,6 +55,11 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.47</version>
+		</dependency>
 	</dependencies>
 
 	<build>
