--- a/dream-album/src/main/resources/conf/test/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/test/dream_album_biz.properties
@@ -8,3 +8,5 @@ dream.album.useralbumitemuploadimgprefixurl=https://img.mokous.com/album/user/it
 dream.album.useralbumitemuploadimglocalpath=/data/img/album/user/item/upload/
 dream.album.useralbumitempreviewimgurlprefix=https://img.mokous.com/album/user/item/preview/
 dream.album.useralbumitempreviewimglocaldir=/data/img/album/user/item/preview/
+
+dream.album.imghandletmppath=/tmp/
