Add api for handle developer server

--- a/dream-album/src/main/resources/conf/dev/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/dev/dream_album_biz.properties
@@ -8,4 +8,7 @@ dream.album.useralbumitemuploadimgprefixurl=http://10.1.0.121:8080/dream-album/i
 dream.album.useralbumitemuploadimglocalpath=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/made/
 dream.album.useralbumitempreviewimgurlprefix=http://10.1.0.121:8080/dream-album/images/made/
 dream.album.useralbumitempreviewimglocaldir=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/made/
+
 dream.album.imghandletmppath=/tmp/
+
+dream.album.developerrestartbashpath=
