--- a/dream-album/src/main/resources/conf/test/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/test/dream_album_biz.properties
@@ -10,3 +10,5 @@ dream.album.useralbumitempreviewimgurlprefix=https://img.mokous.com/album/user/i
 dream.album.useralbumitempreviewimglocaldir=/data/img/album/user/item/preview/
 
 dream.album.imghandletmppath=/tmp/
+
+dream.album.developerrestartbashpath=
