--- a/dream-album/src/main/resources/conf/product/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/product/dream_album_biz.properties
@@ -10,3 +10,5 @@ dream.album.useralbumitempreviewimgurlprefix=https://img.mokous.com/album/user/i
 dream.album.useralbumitempreviewimglocaldir=/data/img/album/user/item/preview/
 
 dream.album.imghandletmppath=/tmp/mokous_img/
+
+dream.album.developerrestartbashpath=/srv/jmcx/developer/bin/restart_dream_album.sh
