修改接口逻辑，新增四格大图制作功能

--- a/dream-album/src/main/resources/conf/dev/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/dev/dream_album_biz.properties
@@ -1,10 +1,10 @@
-dream.album.albumitemeditimgurlprefix=http://10.1.0.121:8080/dream-album/images/
-dream.album.albumitemeditimglocaldir=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/
+dream.album.albumitemeditimgurlprefix=https://img.mokous.com/album/template/
+dream.album.albumitemeditimglocaldir=/data/img/album/template/
 
-dream.album.useralbumpriviewimgprefixurl=http://10.1.0.121:8080/dream-album/images/made/
-dream.album.useralbumpriviewimglocalpath=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/made/
+dream.album.useralbumpriviewimgprefixurl=https://img.mokous.com/album/user/preview
+dream.album.useralbumpriviewimglocalpath=/data/img/album/user/priview
 
-dream.album.useralbumitemuploadimgprefixurl=http://10.1.0.121:8080/dream-album/images/made/
-dream.album.useralbumitemuploadimglocalpath=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/made/
-dream.album.useralbumitempreviewimgurlprefix=http://10.1.0.121:8080/dream-album/images/made/
-dream.album.useralbumitempreviewimglocaldir=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/made/
+dream.album.useralbumitemuploadimgprefixurl=https://img.mokous.com/album/user/item/upload/
+dream.album.useralbumitemuploadimglocalpath=/data/img/album/user/item/upload/
+dream.album.useralbumitempreviewimgurlprefix=https://img.mokous.com/album/user/item/preview/
+dream.album.useralbumitempreviewimglocaldir=/data/img/album/user/item/preview/
