--- a/dream-album/src/main/resources/conf/dev/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/dev/dream_album_biz.properties
@@ -4,18 +4,11 @@ dream.album.albumitemeditimglocaldir=/data/img/album/template/
 dream.album.useralbumpriviewimgprefixurl=https://img.mokous.com/album/user/preview
 dream.album.useralbumpriviewimglocalpath=/data/img/album/user/priview
 
-<<<<<<< HEAD
 dream.album.useralbumitemuploadimgprefixurl=https://img.mokous.com/album/user/item/upload/
 dream.album.useralbumitemuploadimglocalpath=/data/img/album/user/item/upload/
 dream.album.useralbumitempreviewimgurlprefix=https://img.mokous.com/album/user/item/preview/
 dream.album.useralbumitempreviewimglocaldir=/data/img/album/user/item/preview/
-=======
-dream.album.useralbumitemuploadimgprefixurl=http://10.1.0.121:8080/dream-album/images/made/
-dream.album.useralbumitemuploadimglocalpath=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/made/
-dream.album.useralbumitempreviewimgurlprefix=http://10.1.0.121:8080/dream-album/images/made/
-dream.album.useralbumitempreviewimglocaldir=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/made/
 
-dream.album.imghandletmppath=/tmp/
+dream.album.imghandletmppath=/tmp/mokous_img/
 
-dream.album.developerrestartbashpath=
->>>>>>> 2399955c03a02d822acefb1033256245a35f39fe
+dream.album.developerrestartbashpath=/srv/jmcx/developer/bin/restart_dream_album.sh
