--- a/dream-album/src/main/resources/conf/test/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/test/dream_album_biz.properties
@@ -1,5 +1,8 @@
 dream.album.albumitemeditimgurlprefix=http://10.1.0.121:8080/dream-album/images/
 dream.album.albumitemeditimglocaldir=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/
+dream.album.albumitempreiviewmgurlprefix=http://10.1.0.121:8080/dream-album/images/
+dream.album.albumitempreviewimglocaldir=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/
+
 
 dream.album.useralbumpriviewimgprefixurl=http://10.1.0.121:8080/dream-album/images/made/
 dream.album.useralbumpriviewimglocalpath=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/made/
