--- a/dream-album/src/main/resources/conf/product/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/product/dream_album_biz.properties
@@ -1,5 +1,7 @@
 dream.album.albumitemeditimgurlprefix=https://img.mokous.com/album/template/
 dream.album.albumitemeditimglocaldir=/data/img/album/template/
+dream.album.albumitempreiviewmgurlprefix=https://img.mokous.com/album/template/
+dream.album.albumitempreviewimglocaldir=/data/img/album/template/
 
 dream.album.useralbumpriviewimgprefixurl=https://img.mokous.com/album/user/preview
 dream.album.useralbumpriviewimglocalpath=/data/img/album/user/priview
