--- a/dream-album/src/main/resources/conf/dev/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/dev/dream_album_biz.properties
@@ -1,14 +1,14 @@
-dream.album.albumitemeditimgurlprefix=https://cdn.mokous.com/album/template/
+dream.album.albumitemeditimgurlprefix=https://img.mokous.com/album/template/
 dream.album.albumitemeditimglocaldir=/data/img/album/template/
-dream.album.albumitempreiviewmgurlprefix=https://cdn.mokous.com/album/template/
+dream.album.albumitempreiviewmgurlprefix=https://img.mokous.com/album/template/
 dream.album.albumitempreviewimglocaldir=/data/img/album/template/
 
-dream.album.useralbumpriviewimgprefixurl=https://cdn.mokous.com/album/user/preview
+dream.album.useralbumpriviewimgprefixurl=https://img.mokous.com/album/user/preview
 dream.album.useralbumpriviewimglocaldir=/data/img/album/user/priview
 
-dream.album.useralbumitemuploadimgprefixurl=https://cdn.mokous.com/album/user/item/upload/
+dream.album.useralbumitemuploadimgprefixurl=https://img.mokous.com/album/user/item/upload/
 dream.album.useralbumitemuploadimglocaldir=/data/img/album/user/item/upload/
-dream.album.useralbumitempreviewimgurlprefix=https://cdn.mokous.com/album/user/item/preview/
+dream.album.useralbumitempreviewimgurlprefix=https://img.mokous.com/album/user/item/preview/
 dream.album.useralbumitempreviewimglocaldir=/data/img/album/user/item/preview/
 
 dream.album.imghandletmppath=/tmp/mokous_img/
