Refactory image handle

--- a/dream-album/src/main/resources/conf/dev/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/dev/dream_album_biz.properties
@@ -1,16 +1,10 @@
-dream.album.albumitemeditimgurlprefix=https://img.mokous.com/album/template/
-dream.album.albumitemeditimglocaldir=/data/img/album/template/
-dream.album.albumitempreiviewmgurlprefix=https://img.mokous.com/album/template/
-dream.album.albumitempreviewimglocaldir=/data/img/album/template/
+dream.album.imgprefixurl=https://cdn.mokous.com/
+dream.album.imglocaldir=/data/img/
 
-dream.album.useralbumpreviewimgprefixurl=https://img.mokous.com/album/user/preview
-dream.album.useralbumpreviewimglocaldir=/data/img/album/user/preview
-
-dream.album.useralbumitemuploadimgprefixurl=https://img.mokous.com/album/user/item/upload/
-dream.album.useralbumitemuploadimglocaldir=/data/img/album/user/item/upload/
-dream.album.useralbumitempreviewimgurlprefix=https://img.mokous.com/album/user/item/preview/
-dream.album.useralbumitempreviewimglocaldir=/data/img/album/user/item/preview/
-
-dream.album.imghandletmppath=/tmp/mokous_img/
+dream.album.albumitemeditimglocaldir=album/template/
+dream.album.albumitempreviewimglocaldir=album/template/
+dream.album.useralbumpreviewimglocaldir=album/user/preview
+dream.album.useralbumitemuploadimglocaldir=album/user/item/upload/
+dream.album.useralbumitempreviewimglocaldir=album/user/item/preview/
 
 dream.album.developerrestartbashpath=/srv/jmcx/developer/bin/restart_dream_album.sh
