--- a/dream-core/pom.xml
+++ b/dream-core/pom.xml
@@ -160,6 +160,11 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.7.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.imgscalr</groupId>
+			<artifactId>imgscalr-lib</artifactId>
+			<version>4.2</version>
+		</dependency>
 	</dependencies>
 	<distributionManagement>
 		<repository>
