--- a/dream-album/src/main/resources/conf/test/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/test/dream_album_biz.properties
@@ -1,17 +1,10 @@
-dream.album.albumitemeditimgurlprefix=http://10.1.0.131:8080/dream-album/images/
-dream.album.albumitemeditimglocaldir=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/
-dream.album.albumitempreiviewmgurlprefix=http://10.1.0.131:8080/dream-album/images/
-dream.album.albumitempreviewimglocaldir=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/
+dream.album.imgprefixurl=http://10.1.0.131:8080/dream-album/
+dream.album.imglocaldir=/data/img/
 
-
-dream.album.useralbumpreviewimgprefixurl=http://10.1.0.131:8080/dream-album/images/made/
-dream.album.useralbumpreviewimglocaldir=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/made/
-
-dream.album.useralbumitemuploadimgprefixurl=http://10.1.0.131:8080/dream-album/images/made/
-dream.album.useralbumitemuploadimglocaldir=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/made/
-dream.album.useralbumitempreviewimgurlprefix=http://10.1.0.131:8080/dream-album/images/made/
-dream.album.useralbumitempreviewimglocaldir=/Users/liuxinglong/git/dream-album-api/dream-album/src/main/webapp/images/made/
-
-dream.album.imghandletmppath=/tmp/mokous_img/
+dream.album.albumitemeditimglocaldir=album/template/
+dream.album.albumitempreviewimglocaldir=album/template/
+dream.album.useralbumpreviewimglocaldir=album/user/preview
+dream.album.useralbumitemuploadimglocaldir=album/user/item/upload/
+dream.album.useralbumitempreviewimglocaldir=album/user/item/preview/
 
 dream.album.developerrestartbashpath=/srv/jmcx/developer/bin/restart_dream_album.sh
