--- a/dream-family/src/main/resources/conf/dev/dream_family_biz.properties
+++ b/dream-family/src/main/resources/conf/dev/dream_family_biz.properties
@@ -1,5 +1,6 @@
 dream.family.imgprefixurl=https://cdn.mokous.com/
 dream.family.imglocaldir=/data/img/
 
-dream.album.userspaceiconuploadimglocaldir=space/icon/
-dream.album.userfeedimguploadimglocaldir=space/feed/
+dream.family.userspaceiconuploadimglocaldir=space/icon/
+dream.family.userfeedimguploadimglocaldir=space/feed/
+dream.family.useractivityworksuploadimglocaldir=activity/works/
