--- a/dream-family/src/main/resources/conf/test/dream_family_biz.properties
+++ b/dream-family/src/main/resources/conf/test/dream_family_biz.properties
@@ -4,3 +4,5 @@ dream.family.imglocaldir=/data/img/
 dream.family.userspaceiconuploadimglocaldir=space/icon/
 dream.family.userfeedimguploadimglocaldir=space/feed/
 dream.family.useractivityworksuploadimglocaldir=activity/works/
+
+dream.family.usernoticebuild.stop=false
