--- a/dream-album/src/main/resources/conf/product/dream_album_biz.properties
+++ b/dream-album/src/main/resources/conf/product/dream_album_biz.properties
@@ -1,5 +1,5 @@
 dream.album.imgprefixurl=https://cdn.mokous.com/
-dream.album.imglocaldir=/data/img/
+dream.album.imglocaldir=/mnt/img/
 
 dream.album.albumitemeditimglocaldir=album/template/
 dream.album.albumitempreviewimglocaldir=album/template/
