--- a/dream-family/src/main/resources/conf/product/dream_family_biz.properties
+++ b/dream-family/src/main/resources/conf/product/dream_family_biz.properties
@@ -1,5 +1,5 @@
 dream.family.imgprefixurl=https://cdn.mokous.com/
-dream.family.imglocaldir=/data/img/
+dream.family.imglocaldir=/mnt/img/
 
 dream.family.userspaceiconuploadimglocaldir=space/icon/
 dream.family.userfeedimguploadimglocaldir=space/feed/
